# CATENARIA

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/application/: interfaces.py  services.py
app/domain/: models.py  response_models.py
app/infrastructure/: database.py  repositories.py
app/presentation/: api.py
app/tasks/: celery_app.py
catenaria/: =4.2.0
catenaria/data/: datos1.json
catenaria/docs/: 20240621_presentacion.pptx  Backlog.docx
catenaria/notebooks/: Dendogram.ipynb  Feature_Extraction.ipynb  REG-VDI-XIN-5NeighborAnalysis.ipynb  REG-VDI-XIN-FitValid.ipynb  REG-VDI-XIN-FitValid_crucetas.ipynb  REG-VDI-XIN-GroupAnalysis.ipynb  REG-vecinos_y_fitting.ipynb  VDI711-vecinos_y_fitting.ipynb  analisis_lineas_completas.ipynb  catenaria_fits copy.ipynb  clasificacion_vanos.ipynb  clustering_trials.ipynb  data_cleaning.ipynb  feature_extraction_pyvista.ipynb  modules.py  modules_clustering.py  modules_fit.py  modules_fit_seg.py  modules_fits.py  (+7 more)
data/: data_problems
deliverable/: modules_fit.py
docker/: dockerfile
electra_package/: modules_clustering.py  modules_fits.py  modules_main.py  modules_main2.py  modules_plots.py  modules_preprocess.py  modules_utils.py  prerelease_2.py  puntuacion.py  puntuacionparavano.py  release_2.py  testing_vanos.ipynb
notebooks/: 240712_puntuacion.ipynb  Dendogram.ipynb  REG-VDI-XIN-FitValid.ipynb  REG-VDI-XIN-FitValid_crucetas.ipynb  VDI711-vecinos_y_fitting.ipynb  autoencoder_test.ipynb  configuration_analysis.ipynb  modules_fits.py  modules_main.py  modules_main2.py  modules_preprocess.py  modules_utils.py  polilinea.ipynb  puntuacion.py  release2_test.ipynb  rotation_tests.ipynb  testing_vanos.ipynb  vanos_sin_apoyos.txt
(+59 files in other folders)
