[tool.poetry]
name = "electra-api"
version = "0.1.0"
description = ""
authors = ["moracabanas <moracabanas@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
anyio = "4.4.0"
celery = "^5.4.0"
flower = "^2.0.1"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.5.0"
scipy = "1.13.1"
open3d = "^0.18.0"
statsmodels = "^0.14.2"
addict = "^2.4.0"
tqdm = "^4.66.4"
loguru = "^0.7.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
redis = "^5.0.7"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.2.2"
notebook = "^7.2.1"
ipykernel = "^6.29.4"
ipython = "^8.25.0"
ipywidgets = "^8.1.3"
jupyter-console = "^6.6.3"
jupyter-events = "^0.10.0"
jupyter-lsp = "^2.2.5"
jupyter-client = "^8.6.2"
jupyter-core = "^5.7.2"
jupyter-server = "^2.14.1"
jupyter-server-terminals = "^0.5.3"
jupyterlab-pygments = "^0.3.0"
jupyterlab-server = "^2.27.2"
jupyterlab-widgets = "^3.0.11"
nbclient = "^0.10.0"
nbconvert = "^7.16.4"
nbformat = "^5.10.4"
qtconsole = "^5.5.2"
debugpy = "^1.8.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
